# libevent_simplify

./: CMakeLists.txt  README.md  build.sh  build_cmake.sh  config.sh
client_tests/: CMakeLists.txt  glog_logger.h  test_cases.cpp
client_tests/src/: libevent_client_server.cpp  libevent_client_server.h  libevent_tcp_client.cpp  libevent_tcp_client.h  test_cases.cpp
cmake/: Findlibssl.cmake
server_tests/: CMakeLists.txt
server_tests/src/: test_cases.cpp
src/: libevent_async_invoker.cpp  libevent_async_invoker.h  libevent_communication.h  libevent_connection.cpp  libevent_connection.h  libevent_event_server.h  libevent_listener.cpp  libevent_listener.h  libevent_objects.cpp  libevent_objects.h  libevent_socket_server.h  libevent_tcp_connection.cpp  libevent_tcp_connection.h  libevent_tcp_listener.cpp  libevent_tcp_listener.h  libevent_udp_communication.cpp  libevent_udp_communication.h  libevent_udp_listener.cpp  libevent_udp_listener.h
src/libevent/: async_invoker.cpp  async_invoker.h  communication.h  connection.cpp  connection.h  event_server.h  libevent_base.cpp  libevent_base.h  listener.cpp  listener.h  socket_server.h  tcp_connection.cpp  tcp_connection.h  tcp_listener.cpp  tcp_listener.h  udp_communication.cpp  udp_communication.h  udp_listener.cpp  udp_listener.h
src/libevent/client/: client_server.cpp  client_server.h  tcp_client.cpp  tcp_client.h
src/ssl/: certificate.cpp  certificate.h  client_certificate.cpp  client_certificate.h  server_certificate.cpp  server_certificate.h
tests/: common.h
tests/client_tests/: CMakeLists.txt
tests/client_tests/src/: main.cpp  test_ssl_tcp_client.cpp  test_tcp_client.cpp  test_udp_client.cpp
tests/server_tests/: CMakeLists.txt
tests/server_tests/src/: main.cpp  test_ssl_tcp_server.cpp  test_tcp_server.cpp  test_udp_server.cpp
